# KPersonal

./: CMakeLists.txt  conanfile.txt
cmake/: CMakeUtils.cmake  Doxygen.cmake
include/: Example.hpp
src/: main.cpp
tests/unit_tests/: CMakeLists.txt  ExampleQtTest.cpp  ExampleTest.cpp
